@@ -59,6 +59,10 @@ function class:new(name, base, properties)
         end
     end
 
+    if GetInherited(classInstance,"DebugLine") then
+        function metatable:__debugline() return self.DebugLine end
+    end
+
     if __DebugAdapter then __DebugAdapter.stepIgnore(metatable.__newindex) end
 
     --- "Adopts" any table as instance of a class by providing metatable and property setup
