@@ -4,6 +4,7 @@ Date: 2021-01-18
   Changes:
     - localisation improved: text styles
     - providing better information on technology effets panel
+    - [tech] using __debugline 
   Bugfixes:
     - fixing crash clicking on lab in technology panel header
     - fixing crash "Too many parameters for localised string: 22 > 20 (limit). in property tree at ROOT.tooltip[2]"
